@@ -41,6 +41,7 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 
 	/**
 	 * 유저가 설정한 스토리지 이름 조회
+	 *
 	 * @param client
 	 * @param storageMetaName
 	 * @return
@@ -58,6 +59,7 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 
 	/**
 	 * 볼륨 전체 리스트 조회
+	 *
 	 * @param client
 	 * @return
 	 */
@@ -67,6 +69,19 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 			.withLabel(LabelField.CONTROL_BY.getField(), "astra")
 			.list()
 			.getItems();
+	}
+
+	@Override
+	public String createVolume(CreateVolumeDTO createVolumeDTO) {
+		VolumeVO volumeVO = VolumeVO.dtoToVo(createVolumeDTO);
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			PersistentVolumeClaim resource = (PersistentVolumeClaim)volumeVO.createResource();
+			client.persistentVolumeClaims().resource(resource).create();
+			return resource.getMetadata().getName();
+		} catch (Exception e) {
+			log.error("k8s cluster connect error {}", e.getMessage(), e);
+			return null;
+		}
 	}
 
 	private static PersistentVolumeClaim findPVCByMetaName(String volumeMetaName,
@@ -98,6 +113,48 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 		return persistentVolumeClaim.getMetadata().getNamespace();
 	}
 
+	@Override
+	public void deleteVolumeByMetaName(String volumeMetaName) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+
+			//삭제 전 사용중인지 확인해야함
+			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
+
+			//삭제
+			PersistentVolumeClaim pvc = client.persistentVolumeClaims()
+				.inAnyNamespace()
+				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
+				.list()
+				.getItems()
+				.stream()
+				.filter(persistentVolumeClaim -> persistentVolumeClaim.getMetadata().getName().equals(volumeMetaName))
+				.findFirst()
+				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
+
+			client.persistentVolumeClaims().resource(pvc).delete();
+		}
+	}
+
+	@Override
+	public void modifyVolume(ModifyVolumeDTO modifyVolumeDTO) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inAnyNamespace()
+				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
+				.resources()
+				.filter(pvcr -> pvcr.get().getMetadata().getName().equals(modifyVolumeDTO.getVolumeMetaName()))
+				.findFirst()
+				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
+
+			persistentVolumeClaimResource.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
+				.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
+				.endMetadata()
+				.build());
+		}
+	}
+
 	/**
 	 * 아스트라를 통해 만들어진 PVC가 맞는지 체크
 	 * @param pvc
@@ -105,6 +162,25 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 	 */
 	private static boolean isVolumePVC(PersistentVolumeClaim pvc) {
 		return pvc.getMetadata().getName().contains(ResourceType.VOLUME.getName());
+	}
+
+	/**
+	 * pageVolumeResDTO 생성 메서드
+	 * @param client
+	 * @param pvc
+	 * @return
+	 */
+	private PageVolumeResDTO createPageVolumeResDTO(KubernetesClient client, PersistentVolumeClaim pvc) {
+		String volumeName = pvc.getMetadata().getName();
+		boolean isUsed = checkUsedVolume(volumeName, client);
+
+		String namespace = getNamespace(pvc);
+		String workspaceName = getWorkspaceNameByMetaName(client, namespace);
+
+		PageVolumeResDTO pageVolumeResDTO = PageVolumeResDTO.toDTO(pvc);
+		pageVolumeResDTO.setIsUsed(isUsed);
+		pageVolumeResDTO.setWorkspaceName(workspaceName);
+		return pageVolumeResDTO;
 	}
 
 	/**
@@ -182,20 +258,62 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 	}
 
 	@Override
-	public String createVolume(CreateVolumeDTO createVolumeDTO) {
-		VolumeVO volumeVO = VolumeVO.dtoToVo(createVolumeDTO);
+	public void modifyVolumeByMetaName(ModifyVolumeDTO modifyVolumeDTO) {
 		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			PersistentVolumeClaim resource = (PersistentVolumeClaim)volumeVO.createResource();
-			client.persistentVolumeClaims().resource(resource).create();
-			return resource.getMetadata().getName();
-		} catch (Exception e) {
-			log.error("k8s cluster connect error {}", e.getMessage(), e);
-			return null;
+			//본인이 생성한 볼륨인지 체크
+			String creator = modifyVolumeDTO.getCreator();
+			boolean chk = volumeCreatorCheck(modifyVolumeDTO.getWorkspaceMetaName(),
+				modifyVolumeDTO.getVolumeMetaName(), client, creator);
+			if (!chk) {
+				throw new RuntimeException("자신이 생성한 볼륨만 수정할 수 있습니다.");
+			}
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inNamespace(modifyVolumeDTO.getWorkspaceMetaName())
+				.withName(modifyVolumeDTO.getVolumeMetaName());
+
+			if (persistentVolumeClaimResource.get() == null || !isControlledByAstra(
+				persistentVolumeClaimResource.get().getMetadata().getLabels())) {
+				throw new RuntimeException("볼륨이 존재하지 않습니다.");
+			}
+			persistentVolumeClaimResource
+				.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
+					.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
+					.endMetadata()
+					.build());
 		}
 	}
 
 	@Override
-	public List<VolumeResDTO> findVolumesByWorkspaceMetaNameAndStorageMetaName(String workspaceMetaName, String storageMetaName) {
+	public void deleteVolumeByWorkspaceMetaNameAndVolumeMetaName(DeleteVolumeDTO deleteVolumeDTO) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			//본인이 생성한 볼륨인지 체크
+			String creator = deleteVolumeDTO.getCreator();
+			boolean chk = volumeCreatorCheck(deleteVolumeDTO.getWorkspaceMetaName(),
+				deleteVolumeDTO.getVolumeMetaName(), client, creator);
+			if (!chk)
+				throw new RuntimeException("자신이 생성한 볼륨만 삭제할 수 있습니다.");
+
+			//삭제 전 사용중인지 확인해야함
+			String volumeMetaName = deleteVolumeDTO.getVolumeMetaName();
+			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
+			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
+
+			//삭제
+			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
+				.inNamespace(deleteVolumeDTO.getWorkspaceMetaName())
+				.withName(deleteVolumeDTO.getVolumeMetaName());
+			if (persistentVolumeClaimResource.get() == null || !isControlledByAstra(
+				persistentVolumeClaimResource.get().getMetadata().getLabels())) {
+				throw new RuntimeException("볼륨이 존재하지 않습니다.");
+			}
+			persistentVolumeClaimResource.delete();
+		}
+	}
+
+	@Override
+	public List<VolumeResDTO> findVolumesByWorkspaceMetaNameAndStorageMetaName(String workspaceMetaName,
+		String storageMetaName) {
 		try (final KubernetesClient client = k8sAdapter.configServer()) {
 			List<PersistentVolumeClaim> pvcs = client.persistentVolumeClaims()
 				.inNamespace(workspaceMetaName)
@@ -203,7 +321,19 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
 				.list()
 				.getItems();
-			return pvcs.stream().map(VolumeResDTO::toDTO).collect(Collectors.toList());
+			return pvcs.stream().map(VolumeResDTO::toDTO).toList();
+		}
+	}
+
+	@Override
+	public List<PageVolumeResDTO> findVolumes(String option, String keyword) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
+
+			return pvcs.stream()
+				.filter(pvc -> isVolumePVC(pvc))
+				.filter(pvc -> matchesSearchOption(pvc, option, keyword))
+				.map(pvc -> createPageVolumeResDTO(client, pvc)).toList();
 		}
 	}
 
@@ -251,58 +381,6 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 	}
 
 	@Override
-	public void modifyVolumeByMetaName(ModifyVolumeDTO modifyVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			//본인이 생성한 볼륨인지 체크
-			String creator = modifyVolumeDTO.getCreator();
-			boolean chk = volumeCreatorCheck(modifyVolumeDTO.getWorkspaceMetaName(),
-				modifyVolumeDTO.getVolumeMetaName(), client, creator);
-			if (!chk) {
-				throw new RuntimeException("자신이 생성한 볼륨만 수정할 수 있습니다.");
-			}
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inNamespace(modifyVolumeDTO.getWorkspaceMetaName())
-				.withName(modifyVolumeDTO.getVolumeMetaName());
-
-			if(persistentVolumeClaimResource.get() == null || !isControlledByAstra(persistentVolumeClaimResource.get().getMetadata().getLabels())){
-				throw new RuntimeException("볼륨이 존재하지 않습니다.");
-			}
-			persistentVolumeClaimResource
-				.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
-					.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
-					.endMetadata()
-					.build());
-		}
-	}
-
-	@Override
-	public void deleteVolumeByWorkspaceMetaNameAndVolumeMetaName(DeleteVolumeDTO deleteVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			//본인이 생성한 볼륨인지 체크
-			String creator = deleteVolumeDTO.getCreator();
-			boolean chk = volumeCreatorCheck(deleteVolumeDTO.getWorkspaceMetaName(),
-				deleteVolumeDTO.getVolumeMetaName(), client, creator);
-			if (!chk)
-				throw new RuntimeException("자신이 생성한 볼륨만 삭제할 수 있습니다.");
-
-			//삭제 전 사용중인지 확인해야함
-			String volumeMetaName = deleteVolumeDTO.getVolumeMetaName();
-			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
-
-			//삭제
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inNamespace(deleteVolumeDTO.getWorkspaceMetaName())
-				.withName(deleteVolumeDTO.getVolumeMetaName());
-			if(persistentVolumeClaimResource.get() == null || !isControlledByAstra(persistentVolumeClaimResource.get().getMetadata().getLabels())){
-				throw new RuntimeException("볼륨이 존재하지 않습니다.");
-			}
-			persistentVolumeClaimResource.delete();
-		}
-	}
-
-	@Override
 	public List<PageVolumeResDTO> findVolumesWithPagination(String workspaceMetaName, String option, String keyword) {
 		try (final KubernetesClient client = k8sAdapter.configServer()) {
 			List<PersistentVolumeClaim> pvcs = client.persistentVolumeClaims()
@@ -323,123 +401,6 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 				// .sorted(Comparator.comparing(PageVolumeResDTO::getCreatedAt).reversed())
 				.collect(Collectors.toList());
 		}
-	}
-
-	@Override
-	public List<PageVolumeResDTO> findVolumes(String option, String keyword) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
-
-			return pvcs.stream()
-				.filter(pvc -> isVolumePVC(pvc))
-				.filter(pvc -> matchesSearchOption(pvc, option, keyword))
-				.map(pvc -> createPageVolumeResDTO(client, pvc))
-				.collect(Collectors.toList());
-		}
-	}
-
-	@Override
-	public VolumeWithStorageResDTO findVolumeByMetaName(String volumeMetaName) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			List<String> workloadNames = new ArrayList<>();
-			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
-			PersistentVolumeClaim persistentVolumeClaim = findPVCByMetaName(volumeMetaName, pvcs);
-
-			String namespace = getNamespace(persistentVolumeClaim);
-			String workspaceName = getWorkspaceNameByMetaName(client, namespace);
-
-			String requestVolume = getRequestVolume(persistentVolumeClaim);
-			StorageType storageType = getStorageType(persistentVolumeClaim);
-
-			//사용중인 statefulSets 조회
-			List<StatefulSet> statefulSets = getStatefulSetsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(statefulSets, workloadNames);
-			//사용중인 deployment 조회
-			List<Deployment> deployments = getDeploymentsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(deployments, workloadNames);
-			//사용중인 job 조회
-			List<Job> jobs = getJobsInUseVolume(volumeMetaName, client);
-			setWorkloadInUseVolume(jobs, workloadNames);
-			String storageMetaName = getStorageClassName(persistentVolumeClaim);
-			String storageSavePath = getStorageSavePath(client, storageMetaName);
-			String storageName = getStorageClassName(client, storageMetaName);
-			return VolumeWithStorageResDTO.builder()
-				.hasMetadata(persistentVolumeClaim)
-				.workspaceName(workspaceName)
-				.requestVolume(requestVolume)
-				.storageType(storageType)
-				.storageClassName(storageName)
-				.workloadNames(workloadNames)
-				.savePath(storageSavePath)
-				.build();
-		} catch (NullPointerException e) {
-			log.error("volume not found {}", e.getMessage(), e);
-			throw e;
-		} catch (Exception e) {
-			log.error("k8s cluster connect error {}", e.getMessage(), e);
-			throw e;
-		}
-	}
-
-	@Override
-	public void deleteVolumeByMetaName(String volumeMetaName) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-
-			//삭제 전 사용중인지 확인해야함
-			checkAndThrowIfInUse(() -> getDeploymentsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getStatefulSetsInUseVolume(volumeMetaName, client));
-			checkAndThrowIfInUse(() -> getJobsInUseVolume(volumeMetaName, client));
-
-			//삭제
-			PersistentVolumeClaim pvc = client.persistentVolumeClaims()
-				.inAnyNamespace()
-				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
-				.list()
-				.getItems()
-				.stream()
-				.filter(persistentVolumeClaim -> persistentVolumeClaim.getMetadata().getName().equals(volumeMetaName))
-				.findFirst()
-				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
-
-			client.persistentVolumeClaims().resource(pvc).delete();
-		}
-	}
-
-	@Override
-	public void modifyVolume(ModifyVolumeDTO modifyVolumeDTO) {
-		try (final KubernetesClient client = k8sAdapter.configServer()) {
-			Resource<PersistentVolumeClaim> persistentVolumeClaimResource = client.persistentVolumeClaims()
-				.inAnyNamespace()
-				.withLabel(LabelField.CONTROL_BY.getField(), "astra")
-				.resources()
-				.filter(pvcr -> pvcr.get().getMetadata().getName().equals(modifyVolumeDTO.getVolumeMetaName()))
-				.findFirst()
-				.orElseThrow(() -> new RuntimeException("볼륨이 존재하지 않습니다."));
-
-			persistentVolumeClaimResource.edit(pvc -> new PersistentVolumeClaimBuilder(pvc).editMetadata()
-				.addToAnnotations(AnnotationField.NAME.getField(), modifyVolumeDTO.getName())
-				.endMetadata()
-				.build());
-		}
-	}
-
-	/**
-	 * pageVolumeResDTO 생성 메서드
-	 * @param client
-	 * @param pvc
-	 * @return
-	 */
-	private PageVolumeResDTO createPageVolumeResDTO(KubernetesClient client, PersistentVolumeClaim pvc) {
-		String volumeName = pvc.getMetadata().getName();
-		boolean isUsed = checkUsedVolume(volumeName, client);
-
-		String namespace = getNamespace(pvc);
-		String workspaceName = getWorkspaceNameByMetaName(client, namespace);
-
-		PageVolumeResDTO pageVolumeResDTO = PageVolumeResDTO.toDTO(pvc);
-		pageVolumeResDTO.setIsUsed(isUsed);
-		pageVolumeResDTO.setWorkspaceName(workspaceName);
-		return pageVolumeResDTO;
 	}
 
 	/**
@@ -483,6 +444,49 @@ public class VolumeRepositoryImpl implements VolumeRepository {
 		List<Deployment> deploymentsInUseVolume = getDeploymentsInUseVolume(volumeMetaName, client);
 		List<StatefulSet> statefulSetsInUseVolume = getStatefulSetsInUseVolume(volumeMetaName, client);
 		return !jobsInUseVolume.isEmpty() || !deploymentsInUseVolume.isEmpty() || !statefulSetsInUseVolume.isEmpty();
+	}
+
+	@Override
+	public VolumeWithStorageResDTO findVolumeByMetaName(String volumeMetaName) {
+		try (final KubernetesClient client = k8sAdapter.configServer()) {
+			List<String> workloadNames = new ArrayList<>();
+			List<PersistentVolumeClaim> pvcs = getAllVolumes(client);
+			PersistentVolumeClaim persistentVolumeClaim = findPVCByMetaName(volumeMetaName, pvcs);
+
+			String namespace = getNamespace(persistentVolumeClaim);
+			String workspaceName = getWorkspaceNameByMetaName(client, namespace);
+
+			String requestVolume = getRequestVolume(persistentVolumeClaim);
+			StorageType storageType = getStorageType(persistentVolumeClaim);
+
+			//사용중인 statefulSets 조회
+			List<StatefulSet> statefulSets = getStatefulSetsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(statefulSets, workloadNames);
+			//사용중인 deployment 조회
+			List<Deployment> deployments = getDeploymentsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(deployments, workloadNames);
+			//사용중인 job 조회
+			List<Job> jobs = getJobsInUseVolume(volumeMetaName, client);
+			setWorkloadInUseVolume(jobs, workloadNames);
+			String storageMetaName = getStorageClassName(persistentVolumeClaim);
+			String storageSavePath = getStorageSavePath(client, storageMetaName);
+			String storageName = getStorageClassName(client, storageMetaName);
+			return VolumeWithStorageResDTO.builder()
+				.hasMetadata(persistentVolumeClaim)
+				.workspaceName(workspaceName)
+				.requestVolume(requestVolume)
+				.storageType(storageType)
+				.storageClassName(storageName)
+				.workloadNames(workloadNames)
+				.savePath(storageSavePath)
+				.build();
+		} catch (NullPointerException e) {
+			log.error("volume not found {}", e.getMessage(), e);
+			throw e;
+		} catch (Exception e) {
+			log.error("k8s cluster connect error {}", e.getMessage(), e);
+			throw e;
+		}
 	}
 
 	/**
